--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,10 @@
 @import "reset";
+@import "fonts";
+@import "page";
+@import "header";
+@import "navbar";
+
+.svg-logo-dims {
+    width: 137px;
+    height: 38px;
+}
