--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,5 +2,7 @@
     &__box {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        padding: 24px 0;
     }
 }
