--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,3 +1,15 @@
 .navbar {
     display: flex;
+    align-items: center;
+
+    &__link {
+        color: var(--nav-menu);
+        font-size: 18px;
+        line-height: 100%;
+        padding-left: 60px;
+    }
+
+    &__button {
+        margin-left: 20px;
+    }
 }
