--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -3,16 +3,14 @@
 
 $main-front: "Europa", sans-serif;
 :root {
-    --black: #263238;
-    --black-2: #000000;
-    --black-3: #2a3246;
-    --grey: #939393;
-    --grey-2: #8f95a5;
-    --grey-3: #f5f5f5;
-    --grey-4: #eeeeee;
-    --grey-5: #546269;
-    --grey-6: #c4c4c4;
-    --white: #ffffff;
+    --nav-menu: #646a89;
+    --footer-back: #0d123c;
+    --font-color: #484c63;
+    --title-color: #1a2578;
+    --button: #bf0830;
+    --font-color2: #ffffff;
+    --arrow-act: #424b5a;
+    --arrow-dis: #c2d1d9;
 }
 
 * {
