--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -4,9 +4,22 @@
     border: 1px solid var(--button);
     background-color: var(--button);
     color: var(--font-color2);
-    //font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    font-weight: bold;
     &:hover {
         color: var(--button);
         background-color: var(--font-color2);
+        transition: 0.3s all ease;
+    }
+
+    &__outline {
+        color: var(--button);
+        background-color: var(--font-color2);
+        &:hover {
+            background-color: var(--button);
+            color: var(--font-color2);
+            transition: 0.3s all ease;
+        }
     }
 }
