--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,5 @@
 .header {
+    background: linear-gradient(252.91deg, #e3e7f6 3.68%, rgba(227, 231, 246, 0) 97.82%);
     &__box {
         display: flex;
         justify-content: space-between;
