--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,13 @@
 @import "header";
 @import "navbar";
 @import "button";
+@import "hero";
 .svg-logo-dims {
-    width: 137px;
+    //width: 137px;
     height: 38px;
+}
+
+.svg-hero_home-dims {
+    max-width: 848px;
+    height: 642px;
 }
