--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -11,6 +11,7 @@ $main-front: "Europa", sans-serif;
     --font-color2: #ffffff;
     --arrow-act: #424b5a;
     --arrow-dis: #c2d1d9;
+    --black: #000;
 }
 
 * {
