--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "navbar";
 @import "button";
 @import "hero";
+@import "burger-menu";
 .svg-logo-dims {
     //width: 137px;
     height: 38px;
