--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,5 +5,6 @@
         justify-content: space-between;
         align-items: center;
         padding: 24px 0;
+        position: relative;
     }
 }
