--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -5,6 +5,30 @@
         width: 49%;
         margin-top: 129px;
         margin-bottom: 210px;
+        @media screen and (max-width: 1147px) {
+            margin-bottom: 130px;
+        }
+        @media screen and (max-width: 976px) and (min-width: 706px) {
+            margin-bottom: 565px;
+            margin-top: 50px;
+            width: 100%;
+            text-align: center;
+            padding: 0 70px;
+        }
+        @media screen and (max-width: 705px) and (min-width: 500px) {
+            margin-bottom: 440px;
+            margin-top: 50px;
+            width: 100%;
+            text-align: center;
+            padding: 0 20px;
+        }
+        @media screen and (max-width: 499px) and (min-width: 300px) {
+            margin-bottom: 250px;
+            margin-top: 50px;
+            width: 100%;
+            text-align: center;
+            padding: 0;
+        }
     }
     &__title {
         font-size: 48px;
@@ -12,22 +36,58 @@
         font-weight: bold;
         color: var(--title-color);
         padding-bottom: 32px;
+        @media screen and (max-width: 499px) and (min-width: 300px) {
+            font-size: 36px;
+            padding-bottom: 26px;
+        }
     }
     &__text {
         font-size: 22px;
         line-height: 150%;
         color: var(--font-color);
         padding-bottom: 40px;
+        @media screen and (max-width: 499px) and (min-width: 300px) {
+            font-size: 18px;
+            padding-bottom: 26px;
+        }
     }
 
     &__img {
         position: absolute;
         bottom: 0;
         right: -152px;
+        @media screen and (max-width: 1377px) and (min-width: 1242px) {
+            right: -70px;
+        }
+        @media screen and (max-width: 1241px) and (min-width: 977px) {
+            right: -15px;
+        }
+        @media screen and (max-width: 976px) and (min-width: 706px) {
+            right: 0px;
+            left: 50%;
+            margin-left: -350px;
+        }
+        @media screen and (max-width: 705px) and (min-width: 500px) {
+            right: 0px;
+            left: 50%;
+            margin-left: -250px;
+        }
+        @media screen and (max-width: 499px) and (min-width: 300px) {
+            right: 0px;
+            left: 50%;
+            margin-left: -150px;
+        }
     }
 
     &__buttons {
         display: flex;
         gap: 16px;
+        @media screen and (max-width: 976px) and (min-width: 382px) {
+            justify-content: center;
+        }
+        @media screen and (max-width: 382px) {
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 }
