--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,4 +14,16 @@
 .svg-hero_home-dims {
     max-width: 848px;
     height: 642px;
+    @media screen and (max-width: 1147px) and (min-width: 706px) {
+        max-width: 700px;
+        height: 542px;
+    }
+    @media screen and (max-width: 705px) and (min-width: 500px) {
+        max-width: 490px;
+        height: 442px;
+    }
+    @media screen and (max-width: 499px) and (min-width: 300px) {
+        max-width: 290px;
+        height: 232px;
+    }
 }
