added section with brands

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,4 +7,10 @@
         padding: 24px 0;
         position: relative;
     }
+
+    &__img {
+        display: block;
+        width: 136px;
+        height: 36px;
+    }
 }
