--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -22,7 +22,7 @@
             text-align: center;
             padding: 0 20px;
         }
-        @media screen and (max-width: 499px) and (min-width: 300px) {
+        @media screen and (max-width: 499px) {
             margin-bottom: 250px;
             margin-top: 50px;
             width: 100%;
@@ -36,7 +36,7 @@
         font-weight: bold;
         color: var(--title-color);
         padding-bottom: 32px;
-        @media screen and (max-width: 499px) and (min-width: 300px) {
+        @media screen and (max-width: 499px) {
             font-size: 36px;
             padding-bottom: 26px;
         }
@@ -46,7 +46,7 @@
         line-height: 150%;
         color: var(--font-color);
         padding-bottom: 40px;
-        @media screen and (max-width: 499px) and (min-width: 300px) {
+        @media screen and (max-width: 499px) {
             font-size: 18px;
             padding-bottom: 26px;
         }
