--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -9,6 +9,7 @@ $main-front: "Europa", sans-serif;
     --title-color: #1a2578;
     --button: #bf0830;
     --font-color2: #ffffff;
+    --font-color3: #3a3a3c;
     --arrow-act: #424b5a;
     --arrow-dis: #c2d1d9;
     --black: #000;
