--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,8 @@
 @import "hero";
 @import "burger-menu";
 @import "brands";
+@import "products";
+@import "card";
 
 .svg-logo-dims {
     height: 54px;
