--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,15 +1,16 @@
 .card {
-    //padding: 10px;
     box-shadow: 0px 0px 8px rgba(22, 23, 72, 0.07), 0px 25px 35px rgba(22, 23, 72, 0.08);
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
     &__logo {
         display: block;
-        width: 188px;
+        max-width: 188px;
         height: 37px;
         &_2 {
             display: block;
-            width: 220px;
-            height: 25px;
+            max-width: 220px;
+            height: 37px;
         }
     }
 
@@ -23,10 +24,24 @@
     &__content {
         padding: 62px;
         padding-bottom: 0;
+        @media screen and (max-width: 1105px) and (min-width: 768px) {
+            padding: 40px;
+        }
+        @media screen and (max-width: 767px) {
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 30px;
+        }
     }
 
     &__img {
+        margin-top: auto;
         padding: 0 10px;
+        img {
+            max-width: 100%;
+            width: 100%;
+            height: auto;
+        }
     }
 
     &__title {
@@ -36,5 +51,10 @@
         font-size: 24px;
         line-height: 129%;
         color: var(--font-color3);
+        @media screen and (max-width: 1105px) {
+            padding-right: 0px;
+            padding-top: 30px;
+            padding-bottom: 22px;
+        }
     }
 }
