--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -1,5 +1,11 @@
 .products {
     padding: 106px 0 108px 0;
+    @media screen and (max-width: 1024px) and (min-width: 768px) {
+        padding: 86px 0 88px 0;
+    }
+    @media screen and (max-width: 767px) {
+        padding: 66px 0 68px 0;
+    }
     &__title {
         font-size: 44px;
         line-height: 130%;
@@ -7,6 +13,10 @@
         text-align: center;
         color: var(--title-color);
         padding-bottom: 16px;
+        @media screen and (max-width: 1024px) {
+            font-size: 36px;
+            line-height: 120%;
+        }
     }
 
     &__subtitle {
@@ -14,11 +24,23 @@
         color: var(--font-color);
         text-align: center;
         padding-bottom: 97px;
+        @media screen and (max-width: 1024px) and (min-width: 768px) {
+            padding-bottom: 77px;
+        }
+        @media screen and (max-width: 767px) {
+            padding-bottom: 57px;
+        }
     }
 
     &__content {
         display: flex;
         gap: 32px;
+        @media screen and (max-width: 1028px) and (min-width: 768px) {
+            gap: 20px;
+        }
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+        }
     }
 
     &__card {
