--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -1,5 +1,6 @@
 @import url(//db.onlinewebfonts.com/c/d3bfee78e8ead45d9057a95bb6ff5de8?family=Europa-Bold);
 @import url(//db.onlinewebfonts.com/c/23c0fcab84d99da0de762de7e220a6e1?family=Europa);
+@import url(https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css);
 
 $main-front: "Europa", sans-serif;
 :root {
