added info2 section, adaptive layout

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -72,7 +72,7 @@
             left: 50%;
             margin-left: -250px;
         }
-        @media screen and (max-width: 499px) and (min-width: 300px) {
+        @media screen and (max-width: 499px) {
             right: 0px;
             left: 50%;
             margin-left: -150px;
