added sticky navbar, change header components, added new file for burger menu

--- a/src/scss/brands.scss
+++ b/src/scss/brands.scss
@@ -1,5 +1,6 @@
 .brands {
     padding: 101px 0 128px 0;
+    background-color: var(--font-color2);
     @media screen and (max-width: 1100px) and (min-width: 768px) {
         padding: 80px 0 110px 0;
     }
