--- a/src/scss/innovation.scss
+++ b/src/scss/innovation.scss
@@ -1,5 +1,6 @@
 .innovation {
     padding: 120px 0px 30px 0px;
+    background-color: var(--font-color2);
     &__title {
         font-size: 44px;
         line-height: 129%;
