--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -1,7 +1,7 @@
 .page {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    background: linear-gradient(252.91deg, #e3e7f6 3.68%, rgba(227, 231, 246, 0) 97.82%);
 
     &__box {
         margin: 0 auto;
