--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -1,4 +1,5 @@
 .products {
+    background-color: var(--font-color2);
     padding: 106px 0 108px 0;
     @media screen and (max-width: 1024px) and (min-width: 768px) {
         padding: 86px 0 88px 0;
